# vibration-sensor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig
components/sample-azure-iot/: CMakeLists.txt  backoff_algorithm.h  transport_tls_esp32.c
components/sample-azure-iot/common/transport/: transport_tls_socket.h
components/sample-azure-iot/sample_azure_iot_pnp/: sample_azure_iot_pnp.c  sample_azure_iot_pnp_data_if.h  sample_azure_iot_pnp_simulated_data.c
config/: demo_config.h  vibrationSensorModel.json
main/: CMakeLists.txt  DEV_Config.cpp  DEV_Config.h  DEV_config.cpp  DEV_config.h  GUI_Paint.cpp  QMI8658.cpp  QMI8658.h  QMI8658_setup.cpp  ble_setup.cpp  ble_setup.h  device_configuration.h  file_setup.cpp  file_setup.h  gatts_table_creat_demo.h  idf_component.yml  iot_configs.h  iot_setup.cpp  iot_setup.h  main.cpp  sample_azure_iot_pnp.cpp  wifi_setup.cpp  wifi_setup.h
main/includes/: QMI8658_setup.h  file_setup.h  wifi_setup.h
